Bug 356615 - Projects plugin 15.08.3: file context menu only shows two items (git items missing)
Summary: Projects plugin 15.08.3: file context menu only shows two items (git items mi...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-13 17:22 UTC by Gregor Mi
Modified: 2016-01-21 22:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gregor Mi 2015-12-13 17:22:35 UTC
When I right-click on a file in kate's project plugin tree view then there are only two items:

- Copy filename
- Open with...

There used to be some more items for git.

There is no error output on the console.
Comment 1 Mathieu Jobin 2015-12-17 14:40:36 UTC
does it list project files from the git repos for you ?

this problem might be related to this other item

https://bugs.kde.org/show_bug.cgi?id=354494

which has been closed, but it is not fixed for me.
Comment 2 Gregor Mi 2015-12-18 16:34:59 UTC
> does it list project files from the git repos for you ?

yes, it does. So it seems to be different from your problem.
Comment 3 Gregor Mi 2016-01-21 22:07:08 UTC
The reason for the bug is wrong usage of the KMoreTools API; the documentation was clarified here cda4755d738a759fdcb5a5e328782c1615343cfe
Comment 4 Gregor Mi 2016-01-21 22:18:02 UTC
Git commit 52fe3861ebdcb18294f0d9461434301d30b8c3b6 by Gregor Mi.
Committed on 21/01/2016 at 22:16.
Pushed by gregormi into branch 'master'.

fix wrong KMoreTools API usage

The previously used method
KMoreToolsMenuFactory.fillMenuFromGroupingNames returns a lazy menu
which is not filled until the menu is shown. But in the following code
we do not show the menu but use its menu items to fill another menu. But
there were never any menu items in gitMenu->actions().

Solution: use KMoreToolsMenuFactory.fillMenuFromGroupingNames instead.

M  +4    -2    addons/project/kateprojecttreeviewcontextmenu.cpp

http://commits.kde.org/kate/52fe3861ebdcb18294f0d9461434301d30b8c3b6